<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_menu_profile" />


    <item
        android:id="@+id/nav_job"
        android:title="@string/menu_looking_for_job"
        android:icon="@drawable/ic_menu_search" />

    <item
        android:id="@+id/nav_freelancer"
        android:title="@string/menu_hire_freelancer"
        android:icon="@drawable/ic_menu_freelancer" />

    <item
        android:id="@+id/nav_chat"
        android:title="@string/menu_chat"
        android:icon="@drawable/ic_menu_chat" />



    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_logout" />

</group>
</menu>