<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/bg_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/side_nav_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="50dp"
                        android:src="@drawable/ic_profile" />

                    <TextView
                        android:id="@+id/userProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/hint_user_name"
                        android:textSize="24dp"

                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/details_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/save_edit_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bg_edit_profile">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="35dp"
                        android:paddingTop="20dp"
                        android:paddingRight="20dp">


                        <TextView
                            android:id="@+id/tvskill"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/profile_skills"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_skill_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/skill_1"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_skill_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/skill_2"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_skill_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/skill_3"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_skill_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/skill_4"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_skill_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/skill_5"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_skill_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/skill_6"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:textSize="16sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1.5"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:text="@string/profile_experience"
                            android:textColor="@color/colorDark"
                            android:textSize="20dp" />

                        <EditText
                            android:id="@+id/edtExperience"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/text_border"
                            android:hint="@string/hint_enter_experience"
                            android:inputType="textEmailAddress"
                            android:paddingStart="10dp"
                            android:singleLine="true"
                            android:textColor="@color/colorDark"
                            android:textSize="18dp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="@string/profile_description"
                            android:textColor="@color/colorDark"
                            android:textSize="20dp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtDescription"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@drawable/text_border"
                            android:hint="@string/description"
                            android:inputType="textImeMultiLine"
                            android:paddingStart="10dp"
                            android:lines="5"
                            android:textColor="@color/colorDark"
                            android:textSize="18dp" />
                    </LinearLayout>


                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="40dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGray"
                    android:text="Save Changes"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/details_edit_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>