<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/bg_profile"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/side_nav_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="50dp"
                        android:src="@drawable/ic_profile" />

                    <TextView
                        android:id="@+id/userProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/hint_user_name"
                        android:textSize="24dp"

                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/details_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/btnLogout"
                    app:layout_constraintTop_toBottomOf="@+id/bg_profile">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_first_name"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorDark"/>

                        <TextView
                            android:id="@+id/firstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:hint="@string/hint_first_name"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/colorDark"/>
                    </LinearLayout>
                    <!-- First Name Text Input Layout -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_last_name"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorDark"/>

                        <TextView
                            android:id="@+id/lastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:hint="@string/hint_last_name"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/colorDark"/>
                    </LinearLayout>
                    <!-- Last Name Text Input Layout -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_user_name"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorDark"/>

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:hint="@string/hint_user_name"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textColor="@color/colorDark"/>

                    </LinearLayout>

                    <!-- Password Text Input Layout -->
                    <LinearLayout
                        android:id="@+id/lemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_email"
                            android:layout_weight="0"
                            android:layout_marginStart="30dp"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorDark"/>

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:hint="@string/hint_email"
                            android:layout_weight="0.5"
                            android:textSize="20sp"
                            android:textColor="@color/colorDark"/>
                    </LinearLayout>


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogout"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGray"
                    android:text="@string/menu_logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_profile"
                    app:layout_constraintVertical_bias="0.299" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </ScrollView>
</FrameLayout>